elimina FK d'autoritzacioid de la taula d'activitat i afegeix el servei de Registre de l'activitat d'un funcionari habilitat a API interna, amb els casos COPIA, INICITRAMIT i FINALTRAMIT #68
