# rfhab-api-interna/openapi/openapi_interna_secure.json
@@ -33,66 +33,199 @@
   } ],
   "tags" : [ {
     "name" : "RegistreActivitatFuncionariService",
-    "description" : "Registrar l'activitat d'una funcionari"
+    "description" : "Registrar l'activitat d'un/a funcionari/ària"
   }, {
     "name" : "FuncionariRestService",
     "description" : "Registrar l'activitat d'un funcionari"
   } ],
   "paths" : {
     "/secure/activitat/registre" : {
-      "get" : {
+      "post" : {
         "tags" : [ "RegistreActivitatFuncionariService" ],
         "summary" : "Registra una activiat d'un funcionari",
         "operationId" : "registreActivitat",
         "parameters" : [ {
-          "name" : "funcionari",
+          "name" : "language",
           "in" : "query",
-          "description" : "Nom usuari del funcionari que realitza la activitat",
-          "required" : true,
+          "description" : "Idioma en que s'han de retornar les dades(Només suportat 'ca' o 'es')",
           "schema" : {
-            "type" : "array",
-            "items" : {
-              "type" : "string"
+            "type" : "string",
+            "default" : "ca"
+          },
+          "examples" : {
+            "Català" : {
+              "description" : "Català",
+              "value" : "ca"
+            },
+            "Castellano" : {
+              "description" : "Castellano",
+              "value" : "es"
             }
           }
         }, {
-          "name" : "tipus",
+          "name" : "funcionari",
           "in" : "query",
-          "description" : "Tipus de l'activitat",
+          "description" : "NIF del/de la funcionari/ària que realitza la activitat",
           "required" : true,
           "schema" : {
-            "type" : "array",
-            "items" : {
-              "type" : "string"
-            }
+            "type" : "string"
+          },
+          "example" : "44444444A"
+        }, {
+          "name" : "tipus",
+          "in" : "query",
+          "description" : "Tipus de l'activitat:<br />&emsp;<i>1 - Còpia autèntica<br />&emsp;2 - Inici tràmit<br />&emsp;3 - Final tràmit</i>",
+          "required" : true,
+          "schema" : {
+            "type" : "string",
+            "description" : "1 - Còpia autèntica<br />&emsp;2 - Inici tràmit<br />&emsp;3 - Final tràmit",
+            "enum" : [ "1", "2", "3" ]
           }
+        }, {
+          "name" : "data",
+          "in" : "query",
+          "description" : "Data de registre de l'activitat",
+          "required" : true,
+          "schema" : {
+            "pattern" : "^(?:[1-9]\\d{3}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1\\d|2[0-8])|(?:0[13-9]|1[0-2])-(?:29|30)|(?:0[13578]|1[02])-31)|(?:[1-9]\\d(?:0[48]|[2468][048]|[13579][26])|(?:[2468][048]|[13579][26])00)-02-29)T(?:[01]\\d|2[0-3]):[0-5]\\d:[0-5]\\d(?:Z|[+-][01]\\d:[0-5]\\d)$",
+            "type" : "string"
+          },
+          "example" : "2025-08-31T06:15:00+00:00"
+        }, {
+          "name" : "identificadorCopiaAutentica",
+          "in" : "query",
+          "description" : "Identificador de còpia autèntica, podria ser un identificador intern de digitalib o bé el csv de la còpia autèntica",
+          "schema" : {
+            "type" : "string"
+          },
+          "example" : "klñjjskadfjklsdkl/asdlfjsd"
         }, {
           "name" : "registre",
           "in" : "query",
           "description" : "Número de registre associat a l'activitat",
-          "required" : true,
           "schema" : {
-            "type" : "array",
-            "items" : {
-              "type" : "string"
-            }
+            "type" : "string"
+          }
+        }, {
+          "name" : "idActuacioTramitFh ",
+          "in" : "query",
+          "description" : "Identificador associat a l'activitat de tràmit iniciada que es preten marcar com a finalitzada",
+          "schema" : {
+            "type" : "string"
           }
         }, {
           "name" : "tramit",
           "in" : "query",
           "description" : "Codi del tràmit associat a l'activitat",
-          "required" : true,
           "schema" : {
-            "type" : "array",
-            "items" : {
-              "type" : "string"
-            }
+            "type" : "string"
+          }
+        }, {
+          "name" : "tramitversio",
+          "in" : "query",
+          "description" : "Versió del tràmit associat a l'activitat",
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "procediment",
+          "in" : "query",
+          "description" : "Codi del procediment associat a l'activitat",
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "nominteressat",
+          "in" : "query",
+          "description" : "Nom de l'interessat/da del tràmit",
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "llinatge1interessat",
+          "in" : "query",
+          "description" : "Primer Llinatge de l'interessat/da del tràmit",
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "llinatge2interessat",
+          "in" : "query",
+          "description" : "Segon Llinatge de l'interessat/da del tràmit",
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "tipusidentificaciointeressat",
+          "in" : "query",
+          "description" : "Tipus d'identificació de l'interessat/da del tràmit:<br />&emsp;<i>1 - DNI<br />&emsp;2 - NIE<br />&emsp;3 - Passaport<br />&emsp;4 - Altres</i>",
+          "schema" : {
+            "type" : "string",
+            "description" : "1 - DNI<br />&emsp;2 - NIE<br />&emsp;3 - Passaport<br />&emsp;4 - Altres",
+            "enum" : [ "1", "2", "3", "4" ]
+          }
+        }, {
+          "name" : "identificaciointeressat",
+          "in" : "query",
+          "description" : "Identificació de l'interessat/da del tràmit",
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "nomrepresentant",
+          "in" : "query",
+          "description" : "Nom del/de la representant de l'interessat/da del tràmit",
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "llinatge1representant",
+          "in" : "query",
+          "description" : "Primer Llinatge del/de la representant de l'interessat/da del tràmit",
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "llinatge2representant",
+          "in" : "query",
+          "description" : "Segon Llinatge del/de la representant de l'interessat/da del tràmit",
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "tipusidentificaciorepresentant",
+          "in" : "query",
+          "description" : "Tipus d'identificació del/de la representant de l'interessat/da del tràmit:<br />&emsp;<i>1 - DNI<br />&emsp;2 - NIE<br />&emsp;3 - Passaport<br />&emsp;4 - Altres</i>",
+          "schema" : {
+            "type" : "string",
+            "description" : "1 - DNI<br />&emsp;2 - NIE<br />&emsp;3 - Passaport<br />&emsp;4 - Altres",
+            "enum" : [ "1", "2", "3", "4" ]
+          }
+        }, {
+          "name" : "identificaciorepresentant",
+          "in" : "query",
+          "description" : "Identificació del/de la representant de l'interessat/da del tràmit",
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "arxiuexpedientid",
+          "in" : "query",
+          "description" : "Identificació de l'expedient d'Arxiu que conté el Model de consentiment firmat",
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "arxiudocumentid",
+          "in" : "query",
+          "description" : "Identificació del document d'Arxiu que conté el Model de consentiment firmat",
+          "schema" : {
+            "type" : "string"
           }
         }, {
           "name" : "codisia",
           "in" : "query",
           "description" : "Codi SIA associat a l'activitat",
-          "required" : true,
           "schema" : {
             "type" : "array",
             "items" : {
@@ -103,7 +236,6 @@
           "name" : "autoritzacio",
           "in" : "query",
           "description" : "Codi de l'autorització associat a l'activitat",
-          "required" : true,
           "schema" : {
             "type" : "array",
             "items" : {
@@ -113,7 +245,7 @@
         } ],
         "responses" : {
           "200" : {
-            "description" : "Operació realitzada correctament",
+            "description" : "Operació realitzada correctament.",
             "content" : {
               "application/json" : {
                 "schema" : {
